# Cooding

./: .env  .gitignore  README.md  docker-compose.yml  test.yml  user_journey.md  user_story.md
.github/linters/: .flake8
.github/workflows/: CI_front.yml  main.yml  super-linter.yml  test.yml
Shiba/hand-drawn-dogecoin-illustration/: 6381321.ai  6381322.eps
back/: Dockerfile  db.sqlite3  entrypoint.dev.sh  entrypoint.prod.sh  manage.py  pyproject.toml  test_file.py
back/api/: admin.py  decorators.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
back/api/migrations/: 0001_initial.py  0002_remove_classroom_id_alter_classroom_room_id.py  0002_remove_classroom_room_url_remove_exercise_subject_and_more.py  0002_rename_name_user_username.py  0002_teacher_date_joined_teacher_first_name_and_more.py  0002_users.py  0003_alter_solution_exercise_alter_solution_student.py  0003_alter_users_username.py  0003_student_teacher_user_is_student_user_is_teacher.py  0003_teacherprofile_user_role_delete_teacher_and_more.py  0004_alter_user_password_alter_user_role_and_more.py  0004_delete_member_remove_user_is_student_and_more.py  0004_member_delete_users.py  0004_remove_solution_output.py  0004_studentprofile_teacherprofile_remove_teacher_user_and_more.py  0005_alter_classroom_room_id.py  0005_delete_note.py  0006_remove_solution_output.py  0006_user.py
back/uQuizz/: asgi.py  settings.py  urls.py  wsgi.py
front/: .eslintrc.json  Dockerfile  install-frontend-dev.sh  install-frontend-prod.sh  jest.config.js  package-lock.json  package.json  webpack.config.js
(+42 files in other folders)
