[tool.poetry]
name = "uQuizz back"
version = "0.1.0"
description = ""
authors = ["sachabinder <sacha.binder@eeves.enpc.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "4.1.2"
django-environ = "0.9.0"
psycopg2 = "2.9.5 "
djangorestframework = "^3.13.1"
django-cors-headers = "^3.13.0"
PyJWT = "^2.5.0"
djangorestframework-simplejwt = "^5.2.2"
[tool.poetry.dev-dependencies]
